force-app/main/default/objects/SurveyInvitation/fields/CanalProprietario__c.field-meta.xml
<CustomField>
    <fullName>CanalProprietario__c</fullName>
    <formula>TEXT(Lead__r.Owner:User.CANAL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal do Proprietário</label>
    <type>Text</type>
</CustomField>