force-app/main/default/objects/SurveyInvitation/fields/DataEnvio__c.field-meta.xml
<CustomField>
    <fullName>DataEnvio__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Envio</label>
    <type>Text</type>
</CustomField>