force-app/main/default/objects/SurveyInvitation/fields/EmailLead__c.field-meta.xml
<CustomField>
    <fullName>EmailLead__c</fullName>
    <formula>Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email do Lead</label>
    <type>Text</type>
</CustomField>