force-app/main/default/objects/SurveyInvitation/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Convites de pesquisa</relationshipLabel>
    <relationshipName>Convites_de_pesquisa</relationshipName>
    <type>Lookup</type>
</CustomField>