force-app/main/default/objects/SurveyInvitation/fields/N_mero_de_insatisfeitos__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_insatisfeitos__c</fullName>
    <formula>IF( Resposta_da_pergunta_da_pesquisa__r.NumberValue &lt;5, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de insatisfeitos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>