force-app/main/default/objects/SurveyInvitation/fields/ProprietarioDoLead__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioDoLead__c</fullName>
    <formula>Lead__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Lead__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário do Lead</label>
    <type>Text</type>
</CustomField>