force-app/main/default/objects/SurveyInvitation/fields/Resposta_da_pergunta_da_pesquisa__c.field-meta.xml
<CustomField>
    <fullName>Resposta_da_pergunta_da_pesquisa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resposta da pergunta da pesquisa</label>
    <referenceTo>SurveyQuestionResponse</referenceTo>
    <relationshipLabel>Convites de pesquisa</relationshipLabel>
    <relationshipName>Convites_de_pesquisa</relationshipName>
    <type>Lookup</type>
</CustomField>